<resources>
    <string name="app_name">Fitalent</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">data</string>
    <string name="title_dashboard">device</string>
    <string name="title_notifications">mine</string>
    <string name="string_sport">Sport</string>
    <string name="string_input_length_alert">长度超过10个文字!</string>
    <string name="string_sync_bind">synchronous unbind</string>
    <string name="string_unbind_txt">unbind</string>
    <string name="string_sync_bind_desc">Unbinding directly may cause part of device data losing. Do you want to synchronize data before that?</string>
    <string name="string_notice">Notice</string>
    <string name="string_valid_exit">Some data has not been saved whether to save?</string>
    <string name="string_hr_blet_height_heart">Current heart rate is too high!</string>
    <string name="string_end_sport">End exercise</string>
    <string name="string_reconn">Reconnection</string>
    <string name="string_hr_sport_reconn">Device disconnected\nPlease Reconnection or End exercise</string>
    <string name="string_hr_belt_long_press_end">hold to end</string>
    <string name="string_hr_belt_input_sport_name">Enter sport name</string>
    <string name="string_hr_blet_choose_model">Select Timekeeping Mode</string>
    <string name="string_bind">Bind</string>
    <string name="string_hr_no_saved">No valid heart rate detected\nDo not save this activity record</string>
    <string name="string_hr_belt_common">Common</string>
    <string name="string_hr_belt_customize">Custom name</string>
    <string name="string_hr_belt_group_count">Combined timing</string>
    <string name="string_hr_blet_group">Group timing</string>
    <string name="string_hr_belt_countdown">Countdown</string>
    <string name="string_hr_belt_normal">Conventional</string>
    <string name="string_current_group">Current:</string>
    <string name="string_resting">resting</string>
    <string name="string_group">group</string>
    <string name="string_next">next</string>
    <string name="string_start">start</string>
    <string name="string_select_groups">Select groups</string>
    <string name="string_select_group_rest">Choose a break interval</string>
    <string name="string_select_time">Select time</string>
    <string name="string_sport_end">Sports End</string>
    <string name="string_rang_6">Range6</string>
    <string name="string_rang_5">Range5</string>
    <string name="string_rang_4">Range4</string>
    <string name="string_rang_3">Range3</string>
    <string name="string_rang_2">Range2</string>
    <string name="string_rang_1">Range1</string>
    <string name="string_conn_guide_desc">It can be used normally after pairing is successful, click to view the device operation guide</string>
    <string name="string_notify_title_title">FITALENT running</string>
    <string name="string_notify_title_content">check detail</string>
    <string name="string_exercise_times">exercise record</string>
    <string name="string_not_opened">off</string>
    <string name="string_back_today">Back today</string>
    <string name="string_dfu_notify">Notice:</string>
    <string name="string_dfu_desc">1. The firmware upgrade is expected to take 5 to 10 minutes, please wait patiently;\n2. During the upgrade process, please do not turn off the phone\'s bluetooth and keep the screen on.\n3. Please keep the device close to the mobile phone,and do not walk far away or exit the APP;\ n4. Before upgrading, please make sure that the battery of the device is more than 40% ;\n5. After the upgrade done, please ignore the device in the system Bluetooth setting;\n6. If the upgrade fails, please select the DFU device name to connect and try again.</string>
    <string name="string_time_second">s</string>
    <string name="string_time_min">min</string>
    <string name="string_time_hour">h</string>
    <string name="string_unbind_alert">Are you sure you want to unbind?</string>
    <string name="string_open_noti_desc">To use the message reminder function, you need to turn on the notification switch of the mobile phone. Is it turned on?</string>
    <string name="string_scan_complete">Scan complete</string>
    <string name="string_sync">sync..</string>
    <string name="string_normal">Normal</string>
    <string name="string_km">km</string>
    <string name="string_min">Min</string>
    <string name="string_max">Max</string>
    <string name="string_hr_bp_unit">bpm</string>
    <string name="string_bp_unit">mmHg</string>
    <string name="string_times">times</string>
    <string name="string_kcal">kcal</string>
    <string name="string_device_cant_conn">Equipment cannot be connected</string>
    <string name="string_download_success">Download successful</string>
    <string name="string_skip">Skip</string>
    <string name="string_see_why">See Why</string>
    <string name="string_timeout_desc">Device failed to connect multiple times Please check</string>
    <string name="string_conn_timeout">Connection timed out</string>
    <string name="string_step_day">steps/day</string>
    <string name="string_params_goal">%1$s goal</string>
    <string name="string_avg">Avg</string>
    <string name="string_scan_desc">* Unable to search after the device is unbound?</string>
    <string name="string_keep_close_to_phone">Keep your phone close to the device</string>
    <string name="string_ignore">Ignore</string>
    <string name="string_complete_information">Complete information</string>
    <string name="string_finish">Finish</string>
    <string name="strign_dfu_alert_desc">A new version of the device firmware was detected Do you want to upgrade now?</string>
    <string name="string_firmware_txt">Firmware upgrade</string>
    <string name="string_back_current">Return current</string>
    <string name="string_download_start_upgrade">Upgrade</string>
    <string name="string_has_new_version">renew</string>
    <string name="string_low_battery_alert">Upgrade requires at least 40% battery!</string>
    <string name="string_upgrade_success">update successes</string>
    <string name="string_upgrade_ing_not_cancel">The upgrade is in progress, please do not quit!</string>
    <string name="string_upgrade_failed">upgrade failed</string>
    <string name="string_current_version">Current version:</string>
    <string name="string_hr_zone">Heart rate zone</string>
    <string name="string_total_distance">Total mileage</string>
    <string name="string_total_times">Total</string>
    <string name="string_total_duration">Total duration</string>
    <string name="string_total_consumption">Total calorie</string>
    <string name="string_hr_histogram">HR histogram</string>
    <string name="string_hr_data_analysis">HR data analysis diagram</string>
    <string name="string_please_keep_device_stable">*Please wear the device correctly and keep it up and still</string>
    <string name="string_update_time">update time:</string>
    <string name="string_update_2hou_weather">Automatically update device weather information every two hours</string>
    <string name="string_7_day_weather">7 day weather forecast</string>
    <string name="string_air_quality">Air quality</string>
    <string name="string_get_weather">Get weather</string>
    <string name="string_min_hr">Min HR:</string>
    <string name="string_max_hr">Max HR:</string>
    <string name="string_bp_normal_rang">Normal:Systolic 90~139 mmHg / Diastolic 60~89 mmHg</string>
    <string name="string_height_bp_rang">Hypertension:≥140mmHg</string>
    <string name="string_low_bp_rang">Hypotension:&lt;59mmHg</string>
    <string name="string_measure_value">Hear rate value</string>
    <string name="string_measure_time">Measuring time</string>
    <string name="string_single_measure_record">Single HR Measurements Record</string>
    <string name="string_today_count">Current total</string>
    <string name="string_spo2_nomal">Normal:95%~100%</string>
    <string name="string_spo2_abnormal">Abnormal:&lt;95%</string>
    <string name="string_kcal_consumption">Calorie burn</string>
    <string name="string_real_time_hr">Real-time Heart Rate</string>
    <string name="string_data_sync">Data synchronization..</string>
    <string name="string_add_device">Add Device</string>
    <string name="string_open_real_time_hr">Turn on real-time heart rate</string>
    <string name="string_daily_avg">Daily avg:</string>
    <string name="string_systolic_pressure">systolic pressure</string>
    <string name="string_diastolic_pressure">diastolic pressure</string>
    <string name="string_exercise_record">Exercise</string>
    <string name="string_exercise_time">Exercise Time</string>
    <string name="string_operate_guide">Operate guide</string>
    <string name="string_not_bond_device">Not bond device</string>
    <string name="string_help">Help</string>
    <string name="string_personal_center">Personal Center</string>
    <string name="string_feedback">Feedback</string>
    <string name="string_feedback_suggestion">*feedback or suggestion</string>
    <string name="string_input_feedback">Please enter feedback</string>
    <string name="string_contact">*contact</string>
    <string name="string_input_email">Please enter your email</string>
    <string name="string_submit">Submit</string>
    <string name="string_conn_failed">Connection failed</string>
    <string name="string_next_day">next day</string>
    <string name="string_today">Today</string>
    <string name="string_play_equipment">Play Equipment</string>
    <string name="string_time_ratio">Time ratio</string>
    <string name="string_string_download">Download</string>
    <string name="string_i_konw">OK</string>
    <string name="string_download_ing">Downloading</string>
    <string name="string_upgrade_ing">Upgrading</string>
    <string name="string_has_last_version">Currently the last version</string>
    <string name="string_version_file_size">size:</string>
    <string name="string_save_success">save success</string>
    <string name="string_share">Share</string>
    <string name="string_sport_detail">Sport detail</string>
    <string name="string_history">History</string>
    <string name="string_hr_txt_desc">"HRrest: The number of heartbeats per minute in a normal person is generally 60 to 100 in a quiet state.\n Only by selecting an appropriate heart rate interval can a better exercise state be achieved, and an appropriate heart rate interval can be used to achieve a better exercise effect. \n*The data and suggestions provided are for reference only and cannot be used as a basis for clinical diagnosis and treatment</string>
    <string name="string_bp_txt_desc">"Blood pressure is the pressure that blood exerts on the walls of blood vessels as it flows through the blood vessels.\n The blood pressure range of Normal adults at rest state is relatively stable, with normal systolic blood pressure ranging from 90 to 139 mmHg and diastolic blood pressure from 60 to 89 mmHg.\n*The data and suggestions provided are for reference only and cannot be used as a basis for clinical diagnosis and treatment."</string>
    <string name="string_scan_ing">scan..</string>
    <string name="string_personal_data">Personal information</string>
    <string name="string_guide_detail_tips1">In order to provide you with more accurate data services</string>
    <string name="string_guide_detail_tips2">Please fill in real personal information</string>
    <string name="string_gender">Gender</string>
    <string name="string_birthday">Birthday</string>
    <string name="string_height">Height</string>
    <string name="string_weight">Weight</string>
    <string name="string_scan_device">Search device</string>
    <string name="string_confirm">confirm</string>
    <string name="string_cancel">cancel</string>
    <string name="string_prompt">prompt</string>
</resources>