<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#F4F6FA"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/string_feedback"
        app:leftIcon="@drawable/ic_black_back"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_feedback_suggestion"
        android:textColor="#ff000000"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"/>


    <com.hjq.shape.layout.ShapeLinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        app:shape_solidColor="@color/white"
        app:shape_radius="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical">


        <EditText
            android:id="@+id/feedbackContentEdit"
            android:layout_width="match_parent"
            android:background="@null"
            android:maxLength="1000"
            android:hint="@string/string_input_feedback"
            android:layout_height="wrap_content"/>


    </com.hjq.shape.layout.ShapeLinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_contact"
        android:textColor="#ff000000"
        android:textSize="14sp"
        android:layout_margin="@dimen/dp_20"/>


    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/feedbackAddressEdit"
        app:shape_radius="@dimen/dp_10"
        app:shape_solidColor="@color/white"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_5"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/dp_5"
        android:layout_height="wrap_content"
        android:hint="@string/string_input_email"/>



    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/feedbackSubmitTv"
        app:shape_radius="@dimen/dp_13"
        app:shape_solidColor="@color/btn_color"
        app:shape_strokeWidth="1dp"
        app:shape_strokeColor="#4EDD7D"
        android:paddingStart="@dimen/dp_50"
        android:paddingEnd="@dimen/dp_50"
        android:paddingTop="@dimen/dp_5"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/dp_5"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_submit"/>
</LinearLayout>