<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:shape_solidColor="@color/white"
    app:shape_radius="@dimen/dp_15"
    android:padding="@dimen/dp_10"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_height="wrap_content"
        android:text="@string/string_guide_detail_tips1"
        android:textColor="#ff000000"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_guide_detail_tips2"
        android:textColor="#ff000000"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="16sp"
        android:gravity="center"/>



    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/dialogGuideMsgSureTv"
        app:shape_radius="@dimen/dp_13"
        app:shape_solidColor="@color/btn_color"
        app:shape_strokeWidth="1dp"
        app:shape_strokeColor="#4EDD7D"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/dp_5"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_complete_information"/>

    <TextView
        android:id="@+id/dialogGuideIgnore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ignore"
        android:layout_marginBottom="@dimen/dp_30"
        android:textColor="#ffd6d6dd"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:gravity="center"/>

</com.hjq.shape.layout.ShapeLinearLayout>