<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_5"
    app:shape_solidColor="@color/white"
    android:layout_gravity="center"
    app:shape_radius="@dimen/dp_15"
    android:layout_margin="@dimen/dp_10"
    tools:ignore="MissingDefaultResource">


    <TextView
        android:id="@+id/dialogModelCancelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:textColor="#FFD8D8D8"
        android:layout_gravity="right"
        android:layout_marginEnd="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:gravity="right"
        android:text="X"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_hr_blet_choose_model"
        android:textColor="#ff141418"
        android:layout_marginBottom="@dimen/dp_10"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"/>


    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/dialogModelForwardTv"
        android:layout_width="match_parent"
        app:shape_solidColor="#FFF4F6FA"
        android:text="@string/string_hr_belt_normal"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#ff666672"
        app:shape_radius="@dimen/dp_18"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        android:layout_height="wrap_content"/>

    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/dialogModelCountdownTv"
        android:layout_width="match_parent"
        app:shape_solidColor="#FFF4F6FA"
        android:text="@string/string_hr_belt_countdown"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#ff666672"
        app:shape_radius="@dimen/dp_18"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        android:layout_height="wrap_content"/>


    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/dialogModelGroupTv"
        android:layout_width="match_parent"
        app:shape_solidColor="#FFF4F6FA"
        android:text="@string/string_hr_belt_group_count"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#ff666672"
        app:shape_radius="@dimen/dp_18"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        android:layout_height="wrap_content"/>

</com.hjq.shape.layout.ShapeLinearLayout>