<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    app:shape_radius="@dimen/dp_10"
    app:shape_solidColor="@color/white"
    android:layout_margin="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_15"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_help"
        android:textColor="#ff2f2f33"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:layout_gravity="center"/>





    <TextView
        android:id="@+id/helpPlayEquipmentTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_play_equipment"
        android:textColor="#ff2f2f33"
        android:padding="@dimen/dp_10"
        android:textSize="18sp"
        android:gravity="center"/>


    <View
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DBDBDB"/>

    <TextView
        android:id="@+id/helpGuideTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_operate_guide"
        android:textColor="#ff2f2f33"
        android:textSize="18sp"
        android:padding="@dimen/dp_10"
        android:gravity="center"/>


    <View
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="gone"
        android:background="#DBDBDB"/>

    <TextView
        android:id="@+id/helpAudioTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Audio guide"
        android:textColor="#ff2f2f33"
        android:visibility="gone"
        android:textSize="18sp"
        android:padding="@dimen/dp_10"
        android:gravity="center"/>

</com.hjq.shape.layout.ShapeLinearLayout>