<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:shape_radius="@dimen/dp_15"
    app:shape_solidColor="@color/white"
    android:layout_margin="@dimen/dp_10"
    android:layout_gravity="center"
    android:padding="@dimen/dp_10"
    android:layout_height="wrap_content">



    <TextView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/sp_18"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/string_conn_guide_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:orientation="horizontal">


        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/guideDialogSkipTv"
            app:shape_solidColor="@color/white"
            app:shape_radius="@dimen/dp_10"
            app:shape_strokeWidth="@dimen/dp_1"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:text="@string/string_skip"
            android:textColor="#ff9a9a9a"
            android:textSize="16sp"
            android:gravity="center"
            app:shape_strokeColor="#E8E8E8"
            android:padding="@dimen/dp_8"
            android:layout_gravity="center"/>


        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/guideDialogSureTv"
            android:layout_margin="@dimen/dp_10"
            app:shape_solidColor="#4EDD7D"
            app:shape_radius="@dimen/dp_15"
            android:layout_width="0dp"
            android:visibility="visible"
            android:layout_weight="1"
            android:padding="@dimen/dp_8"
            android:layout_height="wrap_content"
            android:text="@string/string_confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>

</com.hjq.shape.layout.ShapeLinearLayout>